# forfun

./: README.md
DirectX/BonesDX/: .gitignore  BonesDX.sln  README.md
Embedded/Bitmap Converter/: ArduinoBitmapConverter.sln  README.md
Embedded/BonesArduino/: BButton.cpp  BButton.h  BEvent.h  BList.h  BScreen.cpp  BScreen.h  BScreenController.cpp  BScreenController.h  BThumbstick.cpp  BThumbstick.h  BTriangleButton.cpp  BTriangleButton.h  Bones.h  BonesCommon.h  BonesConfig.h  BonesScreens.h  README.md
Embedded/C# Event System in C++/: Event.h  README.md
Embedded/Digital Safe/: README.md
Embedded/Floorplan Rover/: README.md
Embedded/Gamepad IR Remote/: README.md
Embedded/Kerbal Space Program Joystick/: README.md
Embedded/Thermostat/: README.md
Embedded/Tonium/: README.md
Embedded/Universal Touchscreen Remote/: README.md
Embedded/WiFi to IR Transmitter/: README.md
Misc/Fourier Transform/: FourierTransform.sln  README.md
Misc/Steganography/: README.md
Misc/Subnetz/: README.md  Subnetz.html
Misc/sl/: Makefile  README.md  ascii.c  ascii.h  sl.c  sl.h
Misc/sl/rust/: Cargo.toml  build.rs
Misc/sl/rust/src/: Makefile  README.md  ascii.rs  cli.rs  compile_test_lib.sh  logo.rs  main.rs  sl-test.c  sl.c
Mobile/TheaterRemote/: README.md  Remote.sln
Mobile/XPBonesPlugin/: README.md
UE4/Gravity Sim/: README.md
Unity/Evolution/: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Evolution.CSharp.Editor.csproj  Evolution.CSharp.Plugins.csproj  Evolution.CSharp.csproj  Evolution.sln  README.md
(+669 files in other folders)
